--- a/public/index.html
+++ b/public/index.html
@@ -816,7 +816,7 @@
                             </div>
                         </div>
                         <div class="toggle-section" id="toggleConcreteColumns">
-                            <span><span class="material-icons-outlined">foundation</span> أعمدة كونكريت</span>
+                            <span><span class="material-icons-outlined">foundation</span> أعمدة او كتل كونكريتية</span>
                             <span class="toggle-icon"><span class="material-icons-outlined">add</span></span>
                         </div>
                         <div id="concreteColumnsInfo" class="toggle-content hidden">
